--- a/productos.html
+++ b/productos.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
   <!--Mi CSS-->
-  <link rel="stylesheet" href="styles/css/styles.css" />
+  <link rel="stylesheet" href="style/css/styles.css" />
   <!--Google fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,900;1,400&display=swap"
     rel="stylesheet" />
