se trabaja con sass

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
     <div class="container py-5 text-white text-center">
       <div class="row p-y3">
         <div class="col-lg-9 mx-auto">
-          <h1>Visitanos</h1>
-          <p class="py-3">Vení a visitarnos a nuestro Showroom</p>
-          <button class="btn1 mr-1">Conocer</button>
+          <h1 class="visitanos__titulo">Visitanos</h1>
+          <p class="visitanos__subtitulo py-3">Vení a visitarnos a nuestro Showroom</p>
+          <button class="visitanos__btn btn1 mr-1">Conocer</button>
         </div>
       </div>
     </div>
@@ -154,17 +154,17 @@
     <div class="container py-5">
       <div class="row">
         <div class="col-lg-5 m-auto text-center">
-          <h1>Contactanos</h1>
+          <h1 class=contacto__titulo>Contactanos</h1>
         </div>
         <div class="row py-5">
           <div class="col-lg-9 m-auto">
             <div class="row">
               <div class="col-lg-4">
-                <h6>¿Donde estamos?</h6>
-                <p>Juan B. Justo XXX</p>
+                <h6 class="contacto__subtitulo">¿Donde estamos?</h6>
+                <p class="contacto__parrafo">Juan B. Justo XXX</p>
 
-                <h6>Email</h6>
-                <p>bohemias@gmail.com</p>
+                <h6 class="contacto__subtitulo">Email</h6>
+                <p class="contacto__parrafo">bohemias@gmail.com</p>
               </div>
 
               <div class="col-lg-7">
@@ -184,7 +184,7 @@
                       placeholder="Ingrese su mensaje"></textarea>
                   </div>
                 </div>
-                <button type="button" class="btn btn-primary">Enviar</button>
+                <button type="button" class="contacto__btn btn btn-primary">Enviar</button>
               </div>
             </div>
           </div>
