Se corrigen errores semanticos

--- a/productos.html
+++ b/productos.html
@@ -21,42 +21,52 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
+  <header>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
       <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"><i class="fas fa-hamburger"></i></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" href="index.html">INICIO</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="remeras.html">REMERAS</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="abrigos.html">ABRIGOS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">JEANS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">CALZADOS</a>
-          </li>
-        </ul>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+        >
+        <span class="navbar-toggler-icon"
+        ><i class="fas fa-hamburger"></i
+          ></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="remeras.html">REMERAS</a>
+            </li>
+            
+            <li class="nav-item">
+              <a class="nav-link" href="abrigos.html">ABRIGOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="jeans.html">JEANS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="zapatos.html">CALZADOS</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-  <hr />
+    </nav>
+  </header>
 
   <section class="productos">
     <div class="container my-5 pt-5">
       <div class="row">
         <div class="col-lg-6 col-md-12 col-12">
-          <img src="img/Remeras/foto10.jpg" alt="" class="img-fluid w-100" />
+          <img src="img/Remeras/foto10.jpg" alt="img de una remera" class="img-fluid w-100" />
         </div>
         <div class="col-lg-6 col-md-12 col-12">
           <nav aria-label="breadcrumb">
@@ -93,7 +103,7 @@
       <div class="row py-5">
         <div class="col-lg-3">
           <div class="card">
-            <img src="img/Remeras/foto1.jpg" class="img-fluid mb-3" alt="" />
+            <img src="img/Remeras/foto1.jpg" class="img-fluid mb-3" alt="img de una remera" />
             <input type="button" value="Ver" />
             <h5>Remera</h5>
             <p>
@@ -103,7 +113,7 @@
         </div>
         <div class="col-lg-3">
           <div class="card">
-            <img src="img/Remeras/foto3.jpg" class="img-fluid mb-3" alt="" />
+            <img src="img/Remeras/foto3.jpg" class="img-fluid mb-3" alt="img de una remera" />
             <input type="button" value="Ver" />
             <h5>Remera</h5>
             <p>
@@ -113,7 +123,7 @@
         </div>
         <div class="col-lg-3">
           <div class="card">
-            <img src="img/Remeras/foto4.jpg" class="img-fluid mb-3" alt="" />
+            <img src="img/Remeras/foto4.jpg" class="img-fluid mb-3" alt="img de una remera" />
             <input type="button" value="Ver" />
             <h5>Remera</h5>
             <p>
@@ -123,7 +133,7 @@
         </div>
         <div class="col-lg-3">
           <div class="card">
-            <img src="img/Remeras/foto7.jpg" class="img-fluid mb-3" alt="" />
+            <img src="img/Remeras/foto7.jpg" class="img-fluid mb-3" alt="img de una remera" />
             <input type="button" value="Ver" />
             <h5>Remera</h5>
             <p>
