--- a/abrigos.html
+++ b/abrigos.html
@@ -22,36 +22,144 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
+  <header>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
       <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"><i class="fas fa-hamburger"></i></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" href="index.html">INICIO</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="remeras.html">REMERAS</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="abrigos.html">ABRIGOS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">JEANS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">CALZADOS</a>
-          </li>
-        </ul>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+        >
+        <span class="navbar-toggler-icon"
+        ><i class="fas fa-hamburger"></i
+          ></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="remeras.html">REMERAS</a>
+            </li>
+            
+            <li class="nav-item">
+              <a class="nav-link" href="abrigos.html">ABRIGOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="jeans.html">JEANS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="zapatos.html">CALZADOS</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+<!--Footer-->
+<footer class="footer">
+  <div class="container py-5">
+    <div class="row">
+      <div class="col-lg-9 m-auto text-center">
+        <h1>Recibí nuestras promociones</h1>
+        <input
+        type="email"
+        name="email"
+        id="email"
+        placeholder="Ingresá tu email"
+        />
+        <button class="btn1">Suscribir!</button>
       </div>
     </div>
-  </nav>
+    <div class="row">
+      <div class="col-lg-11 m-auto py-5">
+        <div class="row">
+          <div class="col-lg-3 py-3">
+            <h5 class="pb-3">Quick Links</h5>
+            <ul class="footer__quickLinks m-0 p-0">
+              <li>
+                <a class="footer__quickLinks__a" href="faqs.html"
+                  >Preguntas frecuentes</a
+                >
+              </li>
+              <li>
+                <a class="footer__quickLinks__a" href="#"
+                  >Politicas de cambio</a
+                >
+              </li>
+              <li>
+                <a class="footer__quickLinks__a" href="#">Cómo comprar</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-3 py-3">
+            <h5 class="pb-3">Ayuda</h5>
+            <ul class="footer__quickLinks m-0 p-0">
+              <li>
+                <a class="footer__quickLinks__a" href="#">Devoluciones</a>
+              </li>
+              <li>
+                <a class="footer__quickLinks__a" href="#">Formas de pago</a>
+              </li>
+              <li>
+                <a class="footer__quickLinks__a" href="#"
+                  >Costos de envío</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-3 py-3">
+            <h5 class="pb-3">Nosotros</h5>
+            <ul class="footer__quickLinks m-0 p-0">
+              <li>
+                <a class="footer__quickLinks__a" href="#">Quienes somos</a>
+              </li>
+              <li>
+                <a class="footer__quickLinks__a" href="#">Contacto</a>
+              </li>
+              <li>
+                <a class="footer__quickLinks__a" href="#">Visitanos</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-3 py-3">
+            <h5 class="pb-3">Redes</h5>
+            <ul class="footer__quickLinks m-0 p-0">
+              <span>
+                <a href="https://www.facebook.com/bohemiias" target="_blank"
+                  ><i class="footer__quickLinks__redes fab fa-facebook"></i
+                ></a>
+              </span>
+              <span>
+                <a
+                  href="https://www.instagram.com/bohemiias_/"
+                  target="_blank"
+                  ><i class="footer__quickLinks__redes fab fa-instagram"></i
+                ></a>
+              </span>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+  crossorigin="anonymous"
+></script>
 
+<script
+  src="https://kit.fontawesome.com/7d4193cf05.js"
+  crossorigin="anonymous"
+></script>
 </body>
 
 </html>
