--- a/jeans.html
+++ b/jeans.html
@@ -32,36 +32,46 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
+    <header>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container">
         <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"><i class="fas fa-hamburger"></i></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" href="index.html">INICIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="remeras.html">REMERAS</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="abrigos.html">ABRIGOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">JEANS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">CALZADOS</a>
-            </li>
-          </ul>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+          >
+          <span class="navbar-toggler-icon"
+          ><i class="fas fa-hamburger"></i
+            ></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="index.html">INICIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="remeras.html">REMERAS</a>
+              </li>
+              
+              <li class="nav-item">
+                <a class="nav-link" href="abrigos.html">ABRIGOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="jeans.html">JEANS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="zapatos.html">CALZADOS</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-    <hr />
+      </nav>
+    </header>
 
     <section class="container">
       <div class="row">
