--- a/remeras.html
+++ b/remeras.html
@@ -21,36 +21,46 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
+  <header>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
       <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"><i class="fas fa-hamburger"></i></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" href="index.html">INICIO</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="remeras.html">REMERAS</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="abrigos.html">ABRIGOS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">JEANS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">CALZADOS</a>
-          </li>
-        </ul>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+        >
+        <span class="navbar-toggler-icon"
+        ><i class="fas fa-hamburger"></i
+          ></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="remeras.html">REMERAS</a>
+            </li>
+            
+            <li class="nav-item">
+              <a class="nav-link" href="abrigos.html">ABRIGOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="jeans.html">JEANS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="zapatos.html">CALZADOS</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-  <hr />
+    </nav>
+  </header>
 
   <section class="hero">
     <div class="container">
@@ -65,7 +75,7 @@
       <h2 class="text-center">Nuestras Remeras</h2>
       <div class="row py-5">
         <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto10.jpg" alt="" class="img-fluid" />
+          <img src="img/Remeras/foto10.jpg" alt="img de una remera" class="img-fluid" />
           <h4>Remeras</h4>
           <span><i class="fa fa-star"></i></span>
           <span><i class="fa fa-star"></i></span>
@@ -76,7 +86,7 @@
           <button onclick="location.href='productos.html'">Ver</button>
         </div>
         <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto5.jpg" alt="" class="img-fluid" />
+          <img src="img/Remeras/foto5.jpg" alt="img de una remera" class="img-fluid" />
           <h4>Remeras</h4>
           <span><i class="fa fa-star"></i></span>
           <span><i class="fa fa-star"></i></span>
@@ -87,7 +97,7 @@
           <button onclick="location.href='productos.html'">Ver</button>
         </div>
         <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto2.jpg" alt="" class="img-fluid" />
+          <img src="img/Remeras/foto2.jpg" alt="img de una remera" class="img-fluid" />
           <h4>Remeras</h4>
           <span><i class="fa fa-star"></i></span>
           <span><i class="fa fa-star"></i></span>
@@ -98,7 +108,7 @@
           <button onclick="location.href='productos.html'">Ver</button>
         </div>
         <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto9.jpg" alt="" class="img-fluid" />
+          <img src="img/Remeras/foto9.jpg" alt="img de una remera" class="img-fluid" />
           <h4>Remeras</h4>
           <span><i class="fa fa-star"></i></span>
           <span><i class="fa fa-star"></i></span>
@@ -112,7 +122,7 @@
       <h2 class="text-center">Nuevos ingresos</h2>
       <div class="row py-5">
         <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto4.jpg" alt="" class="img-fluid" />
+          <img src="img/Remeras/foto4.jpg" alt="img de una remera" class="img-fluid" />
           <h4>Remeras</h4>
           <span><i class="fa fa-star"></i></span>
           <span><i class="fa fa-star"></i></span>
@@ -123,7 +133,7 @@
           <button onclick="location.href='productos.html'">Ver</button>
         </div>
         <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto3.jpg" alt="" class="img-fluid" />
+          <img src="img/Remeras/foto3.jpg" alt="img de una remera" class="img-fluid" />
           <h4>Remeras</h4>
           <span><i class="fa fa-star"></i></span>
           <span><i class="fa fa-star"></i></span>
@@ -134,7 +144,7 @@
           <button onclick="location.href='productos.html'">Ver</button>
         </div>
         <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto4.jpg" alt="" class="img-fluid" />
+          <img src="img/Remeras/foto4.jpg" alt="img de una remera" class="img-fluid" />
           <h4>Remeras</h4>
           <span><i class="fa fa-star"></i></span>
           <span><i class="fa fa-star"></i></span>
@@ -145,7 +155,7 @@
           <button onclick="location.href='productos.html'">Ver</button>
         </div>
         <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto9.jpg" alt="" class="img-fluid" />
+          <img src="img/Remeras/foto9.jpg" alt="img de una remera" class="img-fluid" />
           <h4>Remeras</h4>
           <span><i class="fa fa-star"></i></span>
           <span><i class="fa fa-star"></i></span>
