se trabaja en las secciones de abrigos, faqs, jeans y remeras

--- a/abrigos.html
+++ b/abrigos.html
@@ -62,6 +62,14 @@
       </div>
     </nav>
   </header>
+
+  <main>
+    <section>
+      
+    </section>
+  </main>
+
+
 <!--Footer-->
 <footer class="footer">
   <div class="container py-5">
