--- a/faqs.html
+++ b/faqs.html
@@ -123,64 +123,103 @@
 
 
 
-  <!--Footer-->
-  <footer class="footer__boostrap">
-    <div class="container py-5">
-      <div class="row">
-        <div class="col-lg-9 m-auto text-center">
-          <h1>Recibí nuestras promociones</h1>
-          <input type="email" name="email" id="email" placeholder="Ingresá tu email" />
-          <button class="btn btn-primary">Suscribir!</button>
+    <!--Footer-->
+    <footer class="footer">
+      <div class="container py-5">
+        <div class="row">
+          <div class="col-lg-9 m-auto text-center">
+            <h1>Recibí nuestras promociones</h1>
+            <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Ingresá tu email"
+            />
+            <button class="btn1">Suscribir!</button>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-11 m-auto py-5">
-          <div class="row">
-            <div class="col-lg-3 py-3">
-              <h5 class="pb-3">Quick Links</h5>
-              <ul class="quick__links m-0 p-0">
-                <li><a href="faqs.html">Preguntas frecuentes</a></li>
-                <li><a href="#">Politicas de cambio</a></li>
-                <li><a href="#">Cómo comprar</a></li>
-              </ul>
-            </div>
-            <div class="col-lg-3 py-3">
-              <h5 class="pb-3">Ayuda</h5>
-              <ul class="quick__links m-0 p-0">
-                <li><a href="#">Devoluciones</a></li>
-                <li><a href="#">Formas de pago</a></li>
-                <li><a href="#">Costos de envío</a></li>
-              </ul>
-            </div>
-            <div class="col-lg-3 py-3">
-              <h5 class="pb-3">Nosotros</h5>
-              <ul class="quick__links m-0 p-0">
-                <li><a href="#">Quienes somos</a></li>
-                <li><a href="#">Contacto</a></li>
-                <li><a href="#">Visitanos</a></li>
-              </ul>
-            </div>
-            <div class="col-lg-3 py-3">
-              <h5 class="pb-3">Redes</h5>
-              <ul class="quick__links m-0 p-0">
-                <span>
-                  <a href="https://www.facebook.com/bohemiias" target="_blank"><i class="fab fa-facebook"></i></a>
-                </span>
-                <span>
-                  <a href="https://www.instagram.com/bohemiias_/" target="_blank"><i class="fab fa-instagram"></i></a>
-                </span>
-              </ul>
+        <div class="row">
+          <div class="col-lg-11 m-auto py-5">
+            <div class="row">
+              <div class="col-lg-3 py-3">
+                <h5 class="pb-3">Quick Links</h5>
+                <ul class="footer__quickLinks m-0 p-0">
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Preguntas frecuentes</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="#"
+                      >Politicas de cambio</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="#">Cómo comprar</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-3 py-3">
+                <h5 class="pb-3">Ayuda</h5>
+                <ul class="footer__quickLinks m-0 p-0">
+                  <li>
+                    <a class="footer__quickLinks__a" href="#">Devoluciones</a>
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="#">Formas de pago</a>
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="#"
+                      >Costos de envío</a
+                    >
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-3 py-3">
+                <h5 class="pb-3">Nosotros</h5>
+                <ul class="footer__quickLinks m-0 p-0">
+                  <li>
+                    <a class="footer__quickLinks__a" href="#">Quienes somos</a>
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="#">Contacto</a>
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="#">Visitanos</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-3 py-3">
+                <h5 class="pb-3">Redes</h5>
+                <ul class="footer__quickLinks m-0 p-0">
+                  <span>
+                    <a href="https://www.facebook.com/bohemiias" target="_blank"
+                      ><i class="footer__quickLinks__redes fab fa-facebook"></i
+                    ></a>
+                  </span>
+                  <span>
+                    <a
+                      href="https://www.instagram.com/bohemiias_/"
+                      target="_blank"
+                      ><i class="footer__quickLinks__redes fab fa-instagram"></i
+                    ></a>
+                  </span>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-    crossorigin="anonymous"></script>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
 
-  <script src="https://kit.fontawesome.com/7d4193cf05.js" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/7d4193cf05.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
