--- a/jeans.html
+++ b/jeans.html
@@ -73,65 +73,114 @@
       </nav>
     </header>
 
-    <section class="container">
-      <div class="row">
-        <div class="col-lg-6 col-md-12 col-12">
-          <video autoplay loop muted src="img/Videos/video_01.mp4"></video>
+    <main>
+      <section>
+        <div class="container hero__jeans">
+          <div class="row">
+            <div class="col-lg-7 text-center p-5">
+              <h2 class="hero__jeans__titulo">AMAMOS</h2> 
+              <br>
+              <h1 class="hero__jeans__subtitulo m-5">LOS JEANS</h1>              
+            </div>
+          </div>
         </div>
-        <div class="col-lg-2 remeras__card">
-          <img src="img/Remeras/foto10.jpg" alt="" class="img-fluid" />
-          <h4>Remeras</h4>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star-o"></i></span>
-          <p>$1.999</p>
-          <button onclick="location.href='productos.html'">Ver</button>
+      </section>
+
+    
+    <div class="container p-5 remeras">
+      <h2 class="text-center">Nuevos ingresos</h2>
+      <div class="row py-5">        
+        <div class="col-lg-12 m-auto">
+          <div class="row">
+            <div class="col-lg-4">
+              <video autoplay loop muted src="img/Videos/video_01.mp4"></video>
+            </div>
+            <div class="col-lg-7">
+              <div class="row">
+                <div class="col-lg-6 remeras__card">
+                  <img src="img/Jeans/jean5-2.jpg" alt="img de un jean" class="img-fluid" />
+                  <h4>Remeras</h4>
+                  <span><i class="fa fa-star"></i></span>
+                  <span><i class="fa fa-star"></i></span>
+                  <span><i class="fa fa-star"></i></span>
+                  <span><i class="fa fa-star"></i></span>
+                  <span><i class="fa fa-star-o"></i></span>
+                  <p>$1.999</p>
+                  <button class="contacto__btn" onclick="location.href='productos.html'">Ver</button>
+                </div>
+                <div class="col-lg-6 remeras__card">
+                  <img src="img/Remeras/foto10.jpg" alt="" class="img-fluid" />
+                  <h4>Remeras</h4>
+                  <span><i class="fa fa-star"></i></span>
+                  <span><i class="fa fa-star"></i></span>
+                  <span><i class="fa fa-star"></i></span>
+                  <span><i class="fa fa-star"></i></span>
+                  <span><i class="fa fa-star-o"></i></span>
+                  <p>$1.999</p>
+                  <button class="contacto__btn" onclick="location.href='productos.html'">Ver</button>
+                </div>                
+              </div>              
+            </div>
+          </div>
         </div>
-        <div class="col-lg-2 remeras__card">
-          <img src="img/Remeras/foto10.jpg" alt="" class="img-fluid" />
-          <h4>Remeras</h4>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star-o"></i></span>
-          <p>$1.999</p>
-          <button onclick="location.href='productos.html'">Ver</button>
-        </div>
-        <div class="col-lg-2 remeras__card">
-          <img src="img/Remeras/foto10.jpg" alt="" class="img-fluid" />
-          <h4>Remeras</h4>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star-o"></i></span>
-          <p>$1.999</p>
-          <button onclick="location.href='productos.html'">Ver</button>
-        </div>
-        <div class="col-lg-2 remeras__card">
-          <img src="img/Remeras/foto10.jpg" alt="" class="img-fluid" />
-          <h4>Remeras</h4>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star-o"></i></span>
-          <p>$1.999</p>
-          <button onclick="location.href='productos.html'">Ver</button>
-        </div>
+      </div>
+    </div>
+
+    <section class="remeras">
+      <div class="container py-5">
+        <h2 class="text-center">Nuevos looks</h2>
+        <div class="row py-5">
+          <div class="col-lg-4 remeras__card">
+            <img src="img/Jeans/jean01.jpg" alt="img de un jean" class="img-fluid" />
+            <h4>Jean</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-4 remeras__card">
+            <img src="img/Jeans/jean03.jpg" alt="img de un jean" class="img-fluid" />
+            <h4>Jean</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-4 remeras__card">
+            <img src="img/Jeans/foto8.jpg" alt="img de un jean" class="img-fluid" />
+            <h4>Jean</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>          
+        </div>       
       </div>
     </section>
 
+  </main>
+
     <!--Footer-->
-    <footer class="footer__boostrap">
+    <footer class="footer">
       <div class="container py-5">
         <div class="row">
           <div class="col-lg-9 m-auto text-center">
             <h1>Recibí nuestras promociones</h1>
-            <input type="email" name="email" id="email" placeholder="Ingresá tu email" />
+            <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Ingresá tu email"
+            />
             <button class="btn1">Suscribir!</button>
           </div>
         </div>
@@ -140,36 +189,66 @@
             <div class="row">
               <div class="col-lg-3 py-3">
                 <h5 class="pb-3">Quick Links</h5>
-                <ul class="quick__links m-0 p-0">
-                  <li><a href="faqs.html">Preguntas frecuentes</a></li>
-                  <li><a href="#">Politicas de cambio</a></li>
-                  <li><a href="#">Cómo comprar</a></li>
+                <ul class="footer__quickLinks m-0 p-0">
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Preguntas frecuentes</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="#"
+                      >Politicas de cambio</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="#">Cómo comprar</a>
+                  </li>
                 </ul>
               </div>
               <div class="col-lg-3 py-3">
                 <h5 class="pb-3">Ayuda</h5>
-                <ul class="quick__links m-0 p-0">
-                  <li><a href="#">Devoluciones</a></li>
-                  <li><a href="#">Formas de pago</a></li>
-                  <li><a href="#">Costos de envío</a></li>
+                <ul class="footer__quickLinks m-0 p-0">
+                  <li>
+                    <a class="footer__quickLinks__a" href="#">Devoluciones</a>
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="#">Formas de pago</a>
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="#"
+                      >Costos de envío</a
+                    >
+                  </li>
                 </ul>
               </div>
               <div class="col-lg-3 py-3">
                 <h5 class="pb-3">Nosotros</h5>
-                <ul class="quick__links m-0 p-0">
-                  <li><a href="#">Quienes somos</a></li>
-                  <li><a href="#">Contacto</a></li>
-                  <li><a href="#">Visitanos</a></li>
+                <ul class="footer__quickLinks m-0 p-0">
+                  <li>
+                    <a class="footer__quickLinks__a" href="#">Quienes somos</a>
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="#">Contacto</a>
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="#">Visitanos</a>
+                  </li>
                 </ul>
               </div>
               <div class="col-lg-3 py-3">
                 <h5 class="pb-3">Redes</h5>
-                <ul class="quick__links m-0 p-0">
+                <ul class="footer__quickLinks m-0 p-0">
                   <span>
-                    <a href="https://www.facebook.com/bohemiias" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/bohemiias" target="_blank"
+                      ><i class="footer__quickLinks__redes fab fa-facebook"></i
+                    ></a>
                   </span>
                   <span>
-                    <a href="https://www.instagram.com/bohemiias_/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a
+                      href="https://www.instagram.com/bohemiias_/"
+                      target="_blank"
+                      ><i class="footer__quickLinks__redes fab fa-instagram"></i
+                    ></a>
                   </span>
                 </ul>
               </div>
@@ -178,14 +257,15 @@
         </div>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
 
-    <script src="https://kit.fontawesome.com/7d4193cf05.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/7d4193cf05.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
-
-  </html>
-</body>
-
 </html>
